# forail-backend

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  Vagrantfile  manage.py  pytest.ini  setup.cfg  tox.ini
.github/workflows/: ci.yml
_build/: supervisor_rsyslog.conf  supervisor_task.conf  supervisor_web.conf
docs/: 02-backend-django.md  04-task-engine.md  05-authentication-rbac.md  06-database-schema.md  09-testing-guide.md  11-api-reference.md  12-configuration-reference.md  13-dynamic-surveys.md  14-audit-trail.md  15-event-driven-automation.md  16-drift-detection.md  17-self-service-portal.md  18-oidc-webauthn.md  19-policy-as-code.md  20-iac-scanning.md  21-observability.md  22-multi-tenancy.md  23-recommendations.md  24-awx-import.md  chat_plan.md
forail/: __init__.py  asgi.py  resource_api.py  urls.py  wsgi.py
forail/api/: authentication.py  conf.py  fields.py  generics.py  metadata.py  metrics.py  permissions.py
forail/conf/: access.py  apps.py  conf.py  fields.py  license.py  models.py  registry.py  serializers.py  settings.py  signals.py  urls.py  utils.py  views.py
forail/main/: apps.py  backends.py  conf.py  constants.py  consumers.py  fields.py  ha.py  managers.py  (+8 more)
requirements/: README.md
tests_standalone/: test_audit_trail.py  test_comprehensive.py  test_drift.py  test_drift_audit_fields_schema.py  test_dynamic_survey_standalone.py  test_eda.py  test_integration.py  test_observability.py  test_policy.py  test_recommendations.py  test_scanner.py  test_service_catalog.py  test_tenancy.py  test_webauthn.py
(+707 files in other folders)
