[metadata]
name = forail
author = Krstan Vjestica
author_email = krstanvjestica@yahoo.com
version = attr: forail.get_version

[options]
packages = find:
zip_safe = False
include_package_data = True

[options.package_data]
forail =
    templates/**/*
    api/templates/**/*
    static/**/*
    playbooks/**/*
    plugins/**/*
    lib/site-packages/**/*

[options.packages.find]
include =
    forail
    forail.*

[options.entry_points]
console_scripts =
    forail-manage = forail:manage
    awx-manage = forail:manage
forail.credential_plugins =
    conjur = forail.main.credential_plugins.conjur:conjur_plugin
    hashivault_kv = forail.main.credential_plugins.hashivault:hashivault_kv_plugin
    hashivault_ssh = forail.main.credential_plugins.hashivault:hashivault_ssh_plugin
    azure_kv = forail.main.credential_plugins.azure_kv:azure_keyvault_plugin
    aim = forail.main.credential_plugins.aim:aim_plugin
    centrify_vault_kv = forail.main.credential_plugins.centrify_vault:centrify_plugin
    thycotic_dsv = forail.main.credential_plugins.dsv:dsv_plugin
    thycotic_tss = forail.main.credential_plugins.tss:tss_plugin
    aws_secretsmanager_credential = forail.main.credential_plugins.aws_secretsmanager:aws_secretmanager_plugin
